--- a/OwnSpotify/index.html
+++ b/OwnSpotify/index.html
@@ -15,6 +15,23 @@
         </ul>
     </nav>
 
+    <div class="container">
+        <div class="songList"></div>
+                <h1>NCS- No CopyRight Sound</h1>
+
+        <div class="backgroudposter"></div>
+    </div>
+    <div class="bottom">
+        <input type="range" name="range" id="progressBar" min="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fas fa-3x fa-step-backward" id="previous"></i>
+            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i class="fas fa-3x fa-step-forward" id="next"></i>
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
 </body>
